src/pod-api.yaml
apiVersion: v1
kind: Pod
metadata:
  name: api-pod
  labels:
    app: simple-api  
    version: 0.0.1
spec:
  volumes:
    - name: "api-data"
      hostPath:
        path: "/var/lib/data"
  containers:
  - name: simple-api
    image: acnaweb/simple-node-api
    volumeMounts:
      - mountPath: "/data"
        name: "api-data"
    livenessProbe:
      httpGet:
        path: /healthy
        port: 8080
      initialDelaySeconds: 5
      timeoutSeconds: 1
      periodSeconds: 10
      failureThreshold: 3
    resources:
      requests:
        cpu: "500m"
        memory: "128Mi"
      limits:
        cpu: "500m"
        memory: "128Mi"        
    ports:
    - containerPort: 8080
      name: "port-api"
      protocol: TCP
