src/pod-mongodb.yaml
apiVersion: v1
kind: Pod
metadata:
  name: mongodb-pod
spec:
  containers:
    - name: mongodb
      image: mongo
      resources:
        requests:
          cpu: 100m
          memory: 128M
        limits:
          cpu: 250m
          memory: 256M
      ports:
      - containerPort: 27017
