src/pod-api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pod-api-svc
spec:  
  selector:
    app: simple-api  
  type: NodePort
  ports:
  - protocol: TCP
    port: 8085
    nodePort: 30000
    targetPort: "port-api"
